--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,11 +3,14 @@
 @import "base/reset";
 @import "base/typography";
 
+// Pages
+@import "pages/home";
+@import "pages/about";
+@import "pages/motion";
+
 //Components
 @import "components/navbar";
 @import "components/header";
-@import "components/home";
-@import "components/about";
 @import "components/main-loader";
 @import "components/page-loader";
 @import "components/banner";
