--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -36,7 +36,7 @@
                         .email {
                             .email-header-one {
                                 padding-top: 1em;
-                                font-size: 2.5rem;
+                                font-size: 3rem;
                                 font-weight: 700;
                             }
 
@@ -55,13 +55,13 @@
                                     cursor: pointer;
                                     background-color: $black;
                                     border: 2px solid $black;
-                                    width: 25rem;
+                                    width:30rem;
                                     border-radius: 3rem;
                                     font-family: inherit;
                                     transition: 0.3s ease-in-out;
 
                                     &:hover {
-                                        background-color: transparent;
+                                        background-color: $white;
 
                                         .button-text {
                                             color: $black;
@@ -77,7 +77,7 @@
                             }
                         }
                         .socials {
-                            padding-top: 6em;
+                            padding-top: 3em;
                             font-size: 2rem;
 
                             .social-link {
