--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import "pages/home";
 @import "pages/about";
 @import "pages/motion";
+@import "pages/photoAlbumsPage";
 
 //Components
 @import "components/navbar";
