--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -49,6 +49,7 @@ $card-content-padding: 1em;
                     .content-year-date {
                         color: $year-date-color;
                         font-size: 1.5rem;
+                        letter-spacing: 1px;
                     }
 
                     .content-header {
