--- a/src/scss/pages/_photoAlbumsPage.scss
+++ b/src/scss/pages/_photoAlbumsPage.scss
@@ -1,5 +1,34 @@
 .album-page {
-    .album-title {
-        font-size: 5em;
+    .container {
+        .album-data {
+            .album-info-grid {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                width: 100%;
+
+                .album-facts {
+                    h4 {
+                        padding-top: 1em;
+                        font-weight: 700;
+                        font-size: 2em;
+                    }
+
+                    .album-title {
+                        font-weight: 700;
+                        font-size: 5em;
+                    }
+                }
+
+                .album-description {
+                }
+            }
+
+            .album-images {
+                .album-image {
+                    padding-block: 5em;
+                    width: 100%;
+                }
+            }
+        }
     }
 }
