--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 
 // Pages
 @import "pages/home";
+@import "pages/portfolio";
 @import "pages/about";
 @import "pages/motion";
 @import "pages/photoAlbumsPage";
