portfolio image gallery complete, only zoom on mouse click needed

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  margin-inline: 0 !important;
+  margin-inline: 5vw;
   font-size: 1.8rem;
   height: 100px;
   display: flex;
@@ -50,7 +50,7 @@
     text-decoration: none;
     color: $black;
     transition: 0.3s ease-in-out;
-    margin-left: 4em;
+    margin-left: 2em;
     text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 1.4rem;
