--- a/src/scss/components/_image-modal.scss
+++ b/src/scss/components/_image-modal.scss
@@ -27,16 +27,24 @@ input[type="checkbox"]:checked ~ label > img {
 }
 
 .close-btn {
-    font-weight: 700;
+    background-color: $black;
+    border: 2px solid $black;
+    border-radius: 2em;
+    font-weight: 500;
     font-family: inherit;
     text-transform: uppercase;
-    background: none;
-    border: 0;
-    outline: 0;
-    color: $black;
+    padding-inline: 2em;
+    padding-block: 0.2em;
+    color: $white;
     font-size: 1.5rem;
     cursor: pointer;
     position: absolute;
-    top: 5.5em;
-    right: 5.5em;
+    top: 6em;
+    right: 6em;
+    transition: 0.3s ease-in-out;
+
+    &:hover {
+        background-color: transparent;
+        color: $black;
+    }
 }
