navbar menu added, still working on it

--- a/src/scss/components/_image-modal.scss
+++ b/src/scss/components/_image-modal.scss
@@ -1,26 +1,18 @@
-input[type="checkbox"] {
-    display: none;
-}
-
-input[type="checkbox"]:checked ~ label > img {
-    transform: scale(2);
-    cursor: zoom-out;
-}
-
 .modal-container {
+    height: 100vh;
+    overflow-y: hidden !important;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 100%;
     background-color: $white;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    img {
+    .modal-image {
         height: 80%;
         object-fit: contain;
     }
