--- a/src/scss/pages/_photoAlbumsPage.scss
+++ b/src/scss/pages/_photoAlbumsPage.scss
@@ -42,6 +42,7 @@
                     text-transform: uppercase;
 
                     .image-count-divider {
+                        padding-inline: 10px;
                         font-size: 1.3em;
                     }
                 }
