--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,4 +1,6 @@
 .navbar {
+  background-color: transparent;
+  z-index: 10;
   margin-inline: 5vw;
   font-size: 1.8rem;
   height: 100px;
@@ -22,9 +24,11 @@
       color: $black;
       text-decoration: none;
 
-      &a:hover, a:visited, a:link, a:active
-      {
-          text-decoration: none;
+      &a:hover,
+      a:visited,
+      a:link,
+      a:active {
+        text-decoration: none;
       }
 
       @media (max-width: $layout-breakpoint-medium) {
@@ -38,39 +42,7 @@
   }
 }
 
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.navlink {
-  a {
-    position: relative;
-    text-decoration: none;
-    color: $black;
-    transition: 0.3s ease-in-out;
-    margin-left: 2em;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 1.4rem;
-
-    &::before {
-      margin-bottom: -4px;
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      border-radius: 4px;
-      background-color: $black;
-      bottom: 0;
-      left: 0;
-      opacity: 0;
-      transition: 0.3s ease-in-out;
-    }
-
-    &:hover::before {
-      opacity: 1;
-    }
+.menu {
+  .menu-button {
   }
 }
