--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
   background-color: transparent;
   z-index: 10;
-  margin-inline: 5vw;
+  margin-inline: 8vw;
   font-size: 1.8rem;
   height: 100px;
   display: flex;
@@ -44,5 +44,19 @@
 
 .menu {
   .menu-button {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    font-size: 1.5rem;
+    font-family: inherit;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+
+    &:hover {
+      color: $text-color;
+    }
   }
 }
