--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -7,61 +7,85 @@ $card-content-padding: 1em;
     .container {
         .album-card-grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(2, 1fr);
             grid-column-gap: $card-spacing;
             grid-row-gap: $card-spacing;
             width: 100%;
 
-            .album-card {
-                list-style: none;
-                position: relative;
-                cursor: pointer;
-                overflow: hidden;
+            .album-card-container {
+                text-decoration: none;
+                .album-card {
+                    list-style: none;
+                    position: relative;
+                    cursor: pointer;
+                    overflow: hidden;
 
-                &:before {
-                    content: "";
-                    display: block;
-                    width: auto;
-                    min-height: 600px;
-                }
-
-                .album-card-bg {
-                    background-size: cover;
-                    background-position: center;
-                    // border-radius: $spacing-l;
-                    bottom: 0;
-                    filter: brightness(0.35) saturate(1.2) contrast(1);
-                    left: 0;
-                    position: absolute;
-                    right: 0;
-                    top: 0;
-                    transform-origin: center;
-                    transition: filter 350ms linear, transform 350ms linear;
-                }
-
-                .album-card-cover-content {
-                    left: 1em;
-                    top: 3em;
-                    padding: $card-content-padding;
-                    position: absolute;
-
-                    transition: 0.4s ease-in-out;
-                    .content-year-date {
-                        color: $year-date-color;
-                        font-size: 1.5rem;
-                        letter-spacing: 1px;
+    
+                    .album-card-bg {
+                        background-size: cover;
+                        background-position: center;
+                        // border-radius: $spacing-l;
+                        transform-origin: center;
+                        transition: filter 350ms linear, transform 350ms linear;
+                        
                     }
-
-                    .content-header {
-                        padding-block: 0.7em;
-                        line-height: 1.4;
-                        color: $white;
-
-                        font-size: 2.7rem;
-                        font-weight: 700;
+    
+                    .album-cover {
+                        width: 100%;
+                        height: 50%;
+                    }
+    
+                    .album-card-cover-content {
+                        width: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        text-decoration: none !important;
+                        outline: none;
+                        
+                        .content-header {
+                            color: $black;
+                            font-weight: 500;
+                            font-size: 2rem;
+                            text-decoration: none;
+                            
+    
+                        }
+    
+                        .content-year-date {
+                            font-size: 1.5rem;
+                            font-weight: 700;
+    
+                        }
                     }
                 }
+
             }
+
+
+        }
+    }
+}
+
+.album-card-grid2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: $card-spacing;
+    grid-row-gap: $card-spacing;
+    width: 1000px;
+
+    .album-card2 {
+        .image-container {
+            .album-cover {
+                object-fit: cover;
+            }
+        }
+
+        .album-info {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
         }
     }
 }
