added custom cursor

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import "components/footer";
 @import "components/image-modal";
 @import "components/navbar-menu";
+@import "components/cursor";
 
 body {
   overflow-x: hidden;
