smooth scrolling added, but cant see footer because of height %

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,7 +23,10 @@
 @import "components/navbar-menu";
 @import "components/cursor";
 
+
 body {
+  height: 100%;
+  overscroll-behavior-y: none;
   overflow-x: hidden;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
@@ -39,5 +42,12 @@ body {
 
 main {
   margin-inline: 15vw; //wrapper
+}
+
+.scroll-container {
+  position: fixed;
+  will-change: transform;
+  right: 0;
+  left: 0;
 }
 
