--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
+    height: 100% !important;
+    width: 100%;
     margin-top: 10vh;
-    bottom: 0;
 
     .video-container {
         z-index: -1;
@@ -20,6 +21,7 @@
         }
 
         .container {
+            height: 100%;
             padding-inline: $wrapper-value;
             position: relative;
             z-index: 2;
